--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Questrial', sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.img-w-300{
+  width: 300px;
+  border-radius: 16px;
+}
+
+.data-list{
+  background-color: #efefef;
+}
+
+.all-item{
+  height: 100vh;
+}
+
+.title-name{
+  font-size: 32px;
+  font-weight: 900;
+  padding-top: 40px;
+  letter-spacing: 4px;
+  color: rgba(0, 0, 0, 0.4);
+  text-transform: uppercase;
 }
